# libshrinkler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REUSE.toml  TODO.md
.github/workflows/: builds.yml
cmake/: InstallLibshrinkler.cmake  libshrinklerConfig.cmake.in
src/libshrinkler/: CMakeLists.txt  compression_parameters.cpp  encoder.cpp  encoder_parameters.cpp  endianness.cpp  endianness.cppm  libshrinkler.cppm  shrinkler_headers.hpp  util.cppm
src/shrinkler/: REUSE.toml
test/: CMakeLists.txt
test/libshrinkler_unit_test/: CMakeLists.txt  compression_parameters_test.cpp  encoder_parameters_test.cpp  encoder_test.cpp  int_cast_test.cpp  testthetest.cpp
